Fixed app name after auto rename refactoring

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.maz</groupId>
-    <artifactId>baseOrder</artifactId>
+    <artifactId>order</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>store-baseOrder-service</name>
+    <name>store-order-service</name>
     <description>store-baseOrder-service</description>
     <properties>
         <java.version>11</java.version>
