--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
+
+spring.application.name=order-service
+server.port=8082
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
+
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
