--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 spring.application.name=order-service
 server.port=8082
 
@@ -8,6 +7,11 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
-
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+#EUREKA CONFIGURATION
+spring.cloud.discovery.enabled=true
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.service-id=order-service
+eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
